# tiger-hacks-2022

./: .gitignore  README.md  next.config.mjs  package-lock.json  package.json  tsconfig.json
src/components/: DirectionPanel.tsx  NavigationInput.tsx  TemperatureBox.tsx  dial.tsx  map.module.css  map.tsx  meter.tsx
src/env/: schema.mjs
src/hooks/: central.ts  use-directions.ts  use-window.ts
src/pages/: _app.tsx  dashboard.tsx  dial-test.tsx  index.tsx
src/pages/api/auth/: [...nextauth].ts
src/server/trpc/router/: _app.ts  twilio.ts
src/types/: directions.ts  geocode.ts  weather.ts
src/utils/: pressure.ts
wasm/: Cargo.toml
wasm/src/: lib.rs  pressure_analyzer.rs  weather.rs
