[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = { version = "0.2.83", features = ["serde-serialize"]  }
serde = { version = "1.0.101", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
wasm-bindgen-futures = "0.4.33"
serde-wasm-bindgen = "0.4.5"